--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Electrochip</title>
+  <title>BisindoGo</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -31,15 +31,15 @@
 <body class="sub_page">
 
   <div class="hero_area">
-    <!-- header section strats -->
+    <!-- header section starts -->
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="">
-            <span>
-              Electrochip
-            </span>
+            <span id="username-display">
+              BisindoGo
+            </span> <!-- Display username here -->
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="s-1"> </span>
@@ -62,8 +62,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="nongki.html"> Nongki </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="login.html">Login </a>
+                <!-- Login Button -->
+                <li class="nav-item" id="login-nav-item">
+                  <a class="nav-link" href="login.html">Login</a>
+                </li>
+                <!-- Logout Button -->
+                <li class="nav-item" id="logout-nav-item" style="display:none;">
+                  <a class="nav-link" href="#" id="logout-btn">Logout</a>
                 </li>
               </ul>
             </div>
@@ -73,7 +78,6 @@
     </header>
     <!-- end header section -->
   </div>
-
 
   <!-- service section -->
   <section class="service_section layout_padding">
@@ -134,15 +138,14 @@
     </div>
   </section>
   <!-- end service section -->
- 
+
   <!-- footer section -->
   <footer class="container-fluid footer_section">
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
-            &copy; 2019 All Rights Reserved By
-            <a href="https://html.design/">Free Html Templates</a>
+            © 2024 Belajar Bicara Isyarat. All rights reserved.
           </p>
         </div>
       </div>
@@ -150,10 +153,60 @@
   </footer>
   <!-- footer section -->
 
+  <!-- Firebase and custom JavaScript -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+    import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js";
+
+    // Firebase Configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDxih1Xgx6c48UaCCzRC8xFiP6KIFAiDeE",
+      authDomain: "bicaraisyarat.firebaseapp.com",
+      projectId: "bicaraisyarat",
+      storageBucket: "bicaraisyarat.firebasestorage.app",
+      messagingSenderId: "174239009288",
+      appId: "1:174239009288:web:1f5670844fe0d88e125fbd",
+      measurementId: "G-WML5XTLHEF"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    // Check if user is logged in when the page loads
+    window.onload = function() {
+      const user = auth.currentUser;
+
+      // If user is logged in
+      if (user) {
+        document.getElementById("login-nav-item").style.display = "none";
+        document.getElementById("logout-nav-item").style.display = "block";
+
+        // Set the username display to the logged-in user's display name
+        document.getElementById("username-display").innerText = user.displayName || "Username belum diatur";
+      } else {
+        document.getElementById("login-nav-item").style.display = "block";
+        document.getElementById("logout-nav-item").style.display = "none";
+      }
+    };
+
+    // Logout functionality
+    document.getElementById('logout-btn')?.addEventListener('click', function() {
+      signOut(auth).then(() => {
+        // Hide the logout button and show the login button
+        document.getElementById("logout-nav-item").style.display = "none";
+        document.getElementById("login-nav-item").style.display = "block";
+
+        // Reset username display
+        document.getElementById("username-display").innerText = "BisindoGo";
+      }).catch((error) => {
+        console.error("Logout failed: ", error);
+      });
+    });
+  </script>
 
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
-
 
 </body>
 
