--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
+            <img src="images/Logo_Bisindo-removebg-preview.png" alt="">
             <span>
               BisindoGo
             </span>
