update signin signup google

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <p>
                 Mulai perjalananmu untuk memahami dan berkomunikasi dengan komunitas tuna rungu. Kami menyediakan video tutorial lengkap, kuis interaktif, dan kamus bahasa isyarat yang mudah dipahami.
               </p>
-              <a href="/about.html" class="">
+              <a href="/tutorial.html" class="">
                 Mulai
               </a>
             </div>
